# diep-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  abi.temp.ts  index.html  local.sh  serve.sh  tasks.txt
.cargo/: config.toml
public/: index.html  main.bundle.js
res/: main.bundle.js
src/: main.rs
src/client/: app.rs  mod.rs  web.rs
src/client/components/: externals.rs
src/client/net/: config.rs
src/client/plugins/: client.rs  mod.rs  rendering.rs
src/client/resources/: viewport.rs
src/client/systems/: appinfo.rs  mod.rs  rendering.rs  test.rs  viewport.rs
src/client/util/: class.rs  context.rs  mod.rs  prettify.rs  shapes.rs
src/client/utils/: class.rs  context.rs  drawing.rs  mod.rs  paint.rs  shapes.rs
src/server/: mod.rs
src/server/bundles/: camera.rs  game.rs  mod.rs  object.rs  physics.rs
src/server/components/: camera.rs  game.rs  health.rs  mod.rs  opacity.rs  orbit.rs  relations.rs  reward.rs  rotation.rs
src/server/events/: destroy.rs  health.rs  mod.rs
src/server/net/: config.rs
src/server/plugins/: game.rs  health.rs  mod.rs  routines.rs  server.rs  test.rs
src/server/systems/: routines.rs
src/server/util/: class.rs  colliders.rs  mod.rs
src/shared/: mod.rs
src/shared/bundles/: mod.rs
src/shared/components/: animation.rs  camera.rs  cannon.rs  game.rs  indicator.rs  markers.rs  mod.rs  name.rs  object.rs  opacity.rs  physics.rs  player.rs  style.rs
src/shared/definitions/: classes.rs  colors.rs  commands.rs  config.rs  inputs.rs  mod.rs
src/shared/net/: config.rs  mod.rs  protocol.rs
src/shared/plugins/: mod.rs  physics.rs  shared.rs  transform.rs
src/shared/systems/: test.rs
src/shared/util/: class.rs  colliders.rs  drawinfo.rs  mod.rs  paint.rs  shape.rs
web/: package-lock.json  package.json  tsconfig.json
web/res/: Images.json
web/src/: index.ts
web/src/components/: AppInfo.ts  Attributes.ts  Changelog.ts  InfoHeader.ts  Invite.ts  Minimap.ts  PlayerStatus.ts  Scoreboard.ts
web/src/core/: ABI.ts  Component.ts  Input.ts  Interactable.ts  Renderable.ts  Viewport.ts  Widget.ts
web/src/util/: AABB.ts  Animation.ts  Color.ts  Cursor.ts  Formatter.ts  Interpolate.ts
web/src/widgets/: Bar.ts  Button.ts  Image.ts  Panel.ts  ProgressBar.ts  Slider.ts  Text.ts  TextArea.ts
web/src/widgets/buttons/: AttributeButton.ts  Checkbox.ts  ImageButton.ts  TextButton.ts
