[package]
name = "diep-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["client", "server"]
client = ["web-sys", "wasm-bindgen"]
server = []

[dependencies]
anyhow = "1.0.83"
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "multi-threaded",
    "webgl2",
    "x11",
    "serialize"
] }
cfg-if = "1.0.0"
lightyear = { git = "https://github.com/cBournhonesque/lightyear", branch = "main", features = [
    "webtransport",
    "websocket"
] }
parry2d = "0.15.1"
nalgebra = { version = "0.32.5", features = ["convert-glam025"] }
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
tracing = "0.1.40"

# client
wasm-bindgen = { version = "0.2.92", optional = true }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "CanvasPattern",
    "Path2d",
    "VisibilityState",
    "Worker",
    "Blob",
    "Url",
], optional = true }
